layout bugfix

--- a/src/components/MatchupsTeam.module.css
+++ b/src/components/MatchupsTeam.module.css
@@ -29,7 +29,7 @@
 }
 
 .td[data-count="0"] {
-  opacity: 0;
+  color: transparent;
 }
 
 .thLeft {
